--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     <div class="photos">
         <h2>Here are some images:</h2>
         <br>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVECzTdH_vdN6kNatGLQiEc4ocSFdbcWqztQ&usqp=CAU" alt="image">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIvGKFA5InCmKEzHvbSn9qm6pjCRYQRG6_oA&usqp=CAU" alt="image">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzY--l8uKwS-63vNFF1a41Vg6q9sH7_i0CDQ&usqp=CAU" alt="image">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXs--WlqHBZQflSe6c93HnXwz0Vcl-wzWpzA&usqp=CAU" alt="image">
+        <img src="https://www.pexels.com/photo/white-and-grey-kitten-on-brown-and-black-leopard-print-textile-45201/" alt="image">
+        <img src="https://www.pexels.com/photo/photo-of-orange-tabby-cat-with-red-handkerchief-1741205/" alt="image">
+        <img src="https://www.pexels.com/photo/close-up-photo-of-black-and-white-kitten-looking-up-1835008/" alt="image">
+        <img src="https://www.pexels.com/photo/close-up-photography-of-brown-and-white-kitten-1870376/" alt="image">
     </div>
     <hr>
     <br><h1>Things Cat love:</h1><br>
